Fixed partial header and footer

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -7,7 +7,15 @@
       span.mb-3.mb-md-0.text-muted
         | © 2023 Company, Inc
     ul.nav.col-md-4.justify-content-end.list-unstyled.d-flex
-      li.ms-3
-        a.text-black[href="https://github.com/XaoGao/rubywork_ru"]
-          i.fa-brands.fa-github.fa-2xl
-      
+      li.nav-item
+        a.nav-link.px-2.text-muted[href="#"]
+          | Features
+      li.nav-item
+        a.nav-link.px-2.text-muted[href="#"]
+          | Pricing
+      li.nav-item
+        a.nav-link.px-2.text-muted[href="#"]
+          | FAQs
+      li.nav-item
+        a.nav-link.px-2.text-muted[href="#"]
+          | About
