--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -8,7 +8,5 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary
       ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
           = link_to "Home", root_path, class: "nav-link fs-4 text-black"
-      form.d-flex[role="search"]
-        input.form-control.me-2[type="search" placeholder="Search" aria-label="Search"]
-        button.btn.btn-outline-success[type="submit"]
-          | Search
+      button.btn.btn-outline-success[type="submit" href="#"]  
+        | Sign in
