--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -15,7 +15,7 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary
             .dropdown-menu[aria-labelledby="navbarDropdown"]
               = link_to "Edit profile", edit_user_registration_path, class: "dropdown-item"
               .li.hr.dropdown-divider
-              = link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item"
+              = link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item"
           - else
             = link_to "Sign in", new_user_session_path, class: "btn link-primary"
             = link_to "Sign up", new_user_registration_path, class: "btn btn-outline-primary"
