--- a/app/views/vacancies/show.html.slim
+++ b/app/views/vacancies/show.html.slim
@@ -1,11 +1,11 @@
-div.container.d-flex.flex-column.align-items-center
+.container.d-flex.flex-column.align-items-center
   h1 = @vacancy.title
   p.text-break = @vacancy.body
 
-div.container
-  div.row
-    div.col.text-center.d-flex.justify-content-center
-      = button_to 'Back', vacancies_path, method: :get, class: 'btn btn-success mx-2'
+.container
+  .row
+    .col.text-center.d-flex.justify-content-center
+      = button_to "Back", vacancies_path, method: :get, class: "btn btn-success mx-2"
       - if current_user.id == @vacancy.user_id
-        = button_to 'Edit', edit_vacancy_path, method: :get, class: 'btn btn-primary mx-2'
-        = button_to 'Delete', vacancy_path(@vacancy), method: :delete, data: { 'turbo-confirm': 'Are you sure you want to delete this vacancy?' }, class: 'btn btn-danger mx-2'
+        = button_to "Edit", edit_vacancy_path, method: :get, class: "btn btn-primary mx-2"
+        = button_to "Delete", vacancy_path(@vacancy), method: :delete, data: { "turbo-confirm": "Are you sure you want to delete this vacancy?" }, class: "btn btn-danger mx-2"
