--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,6 +2,9 @@ h2 Sign up
 
 = form_for resource, as: resource_name, url: registration_path(resource_name), html: {class: "bg-light rounded border p-3"}  do |f|
   = render "devise/shared/error_messages", resource: resource
+  .mb-3
+    = f.label :avatar, class: "form-label"
+    = f.file_field :avatar, class: "form-control"
 
   .mb-3
     = f.label :email, class: "form-label"
