Add a badge for views count on Vacancy#show

--- a/app/views/vacancies/show.html.slim
+++ b/app/views/vacancies/show.html.slim
@@ -1,5 +1,8 @@
 .container.d-flex.flex-column.align-items-center
   h1 = @vacancy.title
+  - if user_signed_in? && current_user.id == @vacancy.user_id
+    span.badge.bg-secondary
+      = "Views: #{@vacancy.browses_count}"
   p.text-break = @vacancy.body
 
 .container
