--- a/app/views/vacancies/show.html.slim
+++ b/app/views/vacancies/show.html.slim
@@ -9,6 +9,6 @@
   .row
     .col.text-center.d-flex.justify-content-center
       = button_to "Back", vacancies_path, method: :get, class: "btn btn-success mx-2"
-      - if current_user.id == @vacancy.user_id
+      - if user_signed_in? && current_user.id == @vacancy.user_id
         = button_to "Edit", edit_vacancy_path, method: :get, class: "btn btn-primary mx-2"
         = button_to "Delete", vacancy_path(@vacancy), method: :delete, data: { "turbo-confirm": "Are you sure you want to delete this vacancy?" }, class: "btn btn-danger mx-2"
