added show of flash message in application.html

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
     = javascript_importmap_tags
   body
     .container
+      = render partial: "layouts/flash"
       = render partial: "layouts/header"
       = yield
       = render partial: "layouts/footer"
