--- a/app/views/layouts/_flash.html.slim
+++ b/app/views/layouts/_flash.html.slim
@@ -1,2 +1,3 @@
-- flash.each do |key, message|
-  = content_tag :p, message.html_safe, class: flash_message_css_class(key)
+- if flash.present?
+  - flash.each do |key, message|
+    = content_tag :p, message.html_safe, class: flash_message_css_class(key)
