--- a/app/views/resumes/_form.html.slim
+++ b/app/views/resumes/_form.html.slim
@@ -1,10 +1,8 @@
 = form_with(model: resume, data: { turbo: false }, class: "form-width-avg") do |form|
   .form-group.row.mb-15
-    = form.label :name
-    = form.text_field :name, class: "form-control"
-  .form-group.row.mb-15
     = form.label :description
     = form.rich_text_area :description, class: "form-control"
   = form.hidden_field :user_id, value: current_user.id
+  = form.hidden_field :name, value: current_user.name
   .form-group.mt-10
     = form.submit text, class: "btn btn-outline-success"
